--- a/README.rmd
+++ b/README.rmd
@@ -7,7 +7,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-# Portfolio Tracker <a href=''><img src='man/figures/hex-PT.png' align="right" height="120" /></a>
+# Documentation of the Portfolio Tracker <a href=''><img src='man/figures/hex-PT.png' align="right" height="120" /></a>
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 [![R-CMD-check](https://github.com/lorenzbr/PortfolioTrackerDocs/workflows/R-CMD-check/badge.svg)](https://github.com/lorenzbr/PortfolioTrackerDocs/actions)
 <!-- badges: end -->
 
-App to track your personal investment portfolio. The goal of this tool is to provide a complete and automated workflow from extracting relevant data from your bank statements to calculating the performance of your investments.
+This is the documentation of the Portfolio Tracker, an app to track your investment portfolio. The goal of this tool is to provide a complete and automated workflow from extracting relevant data from your bank statements to calculating the performance of your investments.
 
 
 ## What does the PortfolioTracker do? (WIP)
